--- a/unpacked/css/style.css
+++ b/unpacked/css/style.css
@@ -6,6 +6,7 @@ body { padding-top: 30px; padding-bottom: 20px; }
 
 .header { border-bottom: 1px solid #E5E5E5; }
 .radio-w120 { width: 120px; }
+.radio-w120.radio-inline { margin-left: 0; }
 
 #formInfo { margin-top: 20px; margin-bottom: 0; }
 #formOptions { margin-top: 20px; }
